--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,25 @@
 
 @media (min-width : 100px) {
   .map-body {
-    clear: both;
     width: 750px;
     height: 550px;
   }
   .map-sidebar {
-    height: 550px;
-    clear: both;
   }
 }
 @media (min-width: 750px) {
   .map-body {
-    float: left;
+    display:inline-block;
     width: 1000px;
     height: 800px;
+    float: left;
   }
   .map-sidebar {
-    float: left;
-    height: 800px;
+    margin-top: 30px;
+    padding-top: 30px;
+    display:inline-block;
+    height: 100px;
+    width: 200px;
   }
 }
 
