--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 
+.app {
+    width: 100%;
+}
 @media (min-width : 100px) {
   .map-body {
-    width: 750px;
+    width: 455px;
     height: 550px;
   }
   .map-sidebar {
   }
 }
-@media (min-width: 750px) {
+@media (min-width: 455px) {
   .map-body {
     display:inline-block;
     width: 1000px;
@@ -22,4 +25,7 @@
     width: 200px;
   }
 }
-
+.flag {
+    height:20px;
+    width:20px;
+}
