--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,13 @@
 .informational-text {
     font-size: 12px;
 }
+
+.search-field {
+    display: inline-block;  /* inline-block; none; */
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    border: 0;
+    height: 20px;
+    color: white;
+    background-color: rgba(51, 51, 51, 0);
+}
