--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,64 @@
     color: white;
     background-color: rgba(51, 51, 51, 0);
 }
+
+
+/* autocomplete */
+.react-autosuggest__container {
+    position: relative;
+}
+
+.react-autosuggest__input {
+    width: 200px;
+    height: 20px;
+    padding: 5px 5px;
+    background-color: rgba(51, 51, 51, 0);
+    font-family: Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 13px;
+    border: 0;
+}
+
+.react-autosuggest__input:focus {
+    outline: none;
+}
+
+.react-autosuggest__container--open .react-autosuggest__input {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+    display: none;
+}
+
+.react-autosuggest__container--open .react-autosuggest__suggestions-container {
+    display: block;
+    position: absolute;
+    top: 31px;
+    width: 280px;
+    border: 1px solid #aaa;
+    background-color: #101010;
+    font-family: Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 13px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+    cursor: pointer;
+    padding: 5px 5px;
+}
+
+.react-autosuggest__suggestion--focused {
+    background-color: #ddd;
+}
+/* autocomplete */
