--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
         margin-top: 0px;
         padding-top: 0px;
         padding-left: 0px;
+        width: 760px;
     }
 }
 @media (min-width: 755px) {
@@ -34,10 +35,11 @@
   .map-sidebar {
     margin-top: 30px;
     padding-top: 30px;
-    padding-left: 5px;
+    padding-left: 7px;
     display:inline-block;
-    height: 100px;
     width: 300px;
+    height: 770px;
+    overflow: auto;
   }
 }
 .flag {
